--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "A micro framework for JavaScript games.",
   "author": "Mary Rose Cook <maryrosecook@maryrosecook.com> (http://maryrosecook.com/)",
   "version": "0.4.5",
+  "main": "src/main.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/maryrosecook/coquette.git"
